--- a/app/src/main/res/layout/recipe_detail_items.xml
+++ b/app/src/main/res/layout/recipe_detail_items.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp">
     <TextView
         android:id="@+id/shortDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
-        android:textSize="14sp"
+        android:background="@color/colorAccent"
+        android:textSize="15sp"
         android:layout_centerHorizontal="false"
         android:layout_centerVertical="true" />
 </RelativeLayout>
