--- a/app/src/main/res/layout/activity_recipedetailactivity_detail.xml
+++ b/app/src/main/res/layout/activity_recipedetailactivity_detail.xml
@@ -7,7 +7,7 @@
     android:padding="5dp"
     android:gravity="center_horizontal">
 <FrameLayout
-    android:id="@+id/recipedetailactivity_detail_container"
+    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="centerInside"/>
