--- a/app/src/main/res/layout/recipe_fragment_body_part.xml
+++ b/app/src/main/res/layout/recipe_fragment_body_part.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="16dp">
+
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:fitsSystemWindows="true"
+        android:layout_height="150dp"
         android:scrollbarStyle="insideInset"
         style="@android:style/Widget.Holo.ScrollView"
         android:clipToPadding="false"
@@ -17,18 +19,22 @@
         android:isScrollContainer="false"
         android:fillViewport="false">
 
-        <TextView xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/recipe_detail_text_view"
-            style="?android:attr/textAppearanceLarge"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:padding="1dp"
-            android:textIsSelectable="true"
-            tools:context=".RecipeDetailFragment" />
+            android:layout_height="150dp"
+            android:textSize="16sp"
+            android:textColor="#E0E0E0"
+            android:id="@+id/recipe_detail_text"
+            android:padding="15dp" />
     </ScrollView>
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recipe_detail_reycler_view"
-        android:layout_margin="1dp"
+        android:layout_margin="15dp"
+        android:id="@+id/recipe_detail_recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"     />
+
+
 </LinearLayout>
+
+
